--- a/main.html
+++ b/main.html
@@ -7,7 +7,35 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">to</th>
+      <th scope="col">amount</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>1000</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>1500</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td>2000</td>
+    </tr>
+  </tbody>
+</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
